# practice-programming-languages

./: README.md
practice-c/: README.md
practice-c/01_basics/project_01/: makefile
practice-c/01_basics/project_01/headers/: date.h  other.h
practice-c/01_basics/project_01/src/: date.c  heap_memory.c  main.c  other.c  stack_memory.c
practice-c/01_basics/project_02/src/: challenge_01.c  challenge_02.c  challenge_03.c  extern_class.c  main.c  storage_classes.c
practice-c/02_advanced_types/preprocessor_defines/: define_preprocessor.c
practice-c/02_advanced_types/typedef/: typedef.c
practice-c/02_advanced_types/variable_length_arrays/: var_len_arr.c  vla_challenge.c
practice-c/03_preprocessor/exercises/: exercises_13_5.c
practice-c/03_preprocessor/macros/: macros.c
practice-c/04_data_structures/linked_list/: linked_list.c  main.c
practice-c/05_algorithms/searching/: binary_search.c  sequential_search.c
practice-c/06_math/patterns/: pyramid.c
practice-c/06_math/series/: series_taylor.c
practice-c/fundamentals/: CMakeLists.txt  README.md  build.sh
practice-c/fundamentals/src/: algoritmos.c  arrays.c  bucles.c  control_flujo.c  funciones.c  io.c  macros.c  memoria.c  operadores.c  punteros.c  strings.c  structs.c  variables.c
practice-cpp/: .gitignore  README.md
practice-cpp/cmake_guide/: README.md
practice-cpp/cmake_guide/01_proyecto_basico/: CMakeLists.txt  main.cpp
practice-cpp/cmake_guide/02_multiples_archivos/: CMakeLists.txt
practice-cpp/cmake_guide/02_multiples_archivos/include/: calculadora.h
practice-cpp/cmake_guide/02_multiples_archivos/src/: calculadora.cpp  main.cpp
practice-cpp/cmake_guide/03_librerias/: CMakeLists.txt
practice-cpp/cmake_guide/03_librerias/lib/: matematicas.cpp  matematicas.h
practice-cpp/cmake_guide/03_librerias/src/: main.cpp
practice-cpp/cmake_guide/04_subdirectorios/: CMakeLists.txt
practice-cpp/cmake_guide/04_subdirectorios/src/: CMakeLists.txt  main.cpp
practice-cpp/cmake_guide/04_subdirectorios/utilidades/: CMakeLists.txt  utilidades.cpp  utilidades.h
practice-cpp/cmake_guide/05_variables_opciones/: CMakeLists.txt  main.cpp
practice-cpp/dsa/: README.md
practice-cpp/dsa/LinkedList/: CMakeLists.txt  build.sh
practice-cpp/dsa/LinkedList/headers/: LinkedList.h  Node.h
practice-cpp/dsa/LinkedList/src/: LinkedList.cpp  main.cpp
practice-cpp/fundamentals/: CMakeLists.txt  README.md  build.sh
practice-cpp/fundamentals/src/: arreglos.cpp  bucles.cpp  clases.cpp  control_flujo.cpp  excepciones.cpp  funciones.cpp  herencia.cpp  memoria.cpp  operadores.cpp  punteros.cpp  stl.cpp  strings.cpp  variables.cpp
practice-dotnet/: README.md
practice-go/: README.md
practice-java/: .gitignore  README.md
practice-java/architecture/todo-app/: Dockerfile  docker-compose.yml  pom.xml
practice-java/architecture/todo-app/src/main/java/com/hexagonal/todo/: TodoAppApplication.java
practice-java/architecture/todo-app/src/main/java/com/hexagonal/todo/application/services/: TaskService.java
practice-java/architecture/todo-app/src/main/java/com/hexagonal/todo/application/usecases/: CreateTaskUseCaseImpl.java  DeleteTaskUseCaseImpl.java  GetAdditionalTaskInfoUseCaseImpl.java  UpdateTaskUseCaseImpl.java
practice-java/architecture/todo-app/src/main/java/com/hexagonal/todo/domain/models/: AdditionalTaskInfo.java  Task.java
practice-java/architecture/todo-app/src/main/java/com/hexagonal/todo/domain/ports/in/: DeleteTaskUseCase.java  UpdateTaskUseCase.java
practice-java/architecture/todo-app/src/main/java/com/hexagonal/todo/infrastructure/adapters/: ExternalServiceAdapter.java
practice-java/architecture/todo-app/src/main/java/com/hexagonal/todo/infrastructure/config/: ApplicationConfig.java
practice-java/architecture/todo-app/src/main/java/com/hexagonal/todo/infrastructure/controllers/: GlobalExceptionHandler.java  TaskController.java
practice-java/architecture/todo-app/src/main/java/com/hexagonal/todo/infrastructure/controllers/dto/: AdditionalTaskInfoResponse.java  TaskRequest.java  TaskResponse.java
practice-java/architecture/todo-app/src/main/java/com/hexagonal/todo/infrastructure/entities/: TaskEntity.java
practice-java/architecture/todo-app/src/main/java/com/hexagonal/todo/infrastructure/repositories/: JpaTaskRepository.java  JpaTaskRepositoryAdapter.java
practice-java/architecture/todo-app/src/main/resources/: application.yaml
practice-java/architecture/todo-app/src/test/java/com/hexagonal/todo/: TodoAppApplicationTests.java
practice-java/dsa/: README.md
practice-java/dsa/src/datastructures/binaryseachtree/: BinarySearchTree.java  Main.java
practice-java/dsa/src/datastructures/doublylinkedlist/: DoublyLinkedList.java  Main.java  README.md
practice-java/dsa/src/datastructures/linkedlist/: LinkedList.java  Main.java  README.md
practice-java/dsa/src/datastructures/queue/: Main.java  Queue.java
practice-java/dsa/src/datastructures/stack/: Main.java  Stack.java  StackArrayList.java
practice-java/dsa/src/excercises/linkedlist/: LinkedList.java  Main.java  README.md
practice-java/dsa/src/misc/big_o/: BigO.java  README.md
practice-java/dsa/src/misc/classes/: Cookie.java  Main.java
practice-java/dsa/src/misc/pointers/: Main.java
practice-java/fundamentals/src/: Arreglos.java  Bucles.java  Clases.java  Colecciones.java  ControlFlujo.java  Excepciones.java  Herencia.java  HolaMundo.java  Interfaces.java  Metodos.java  Operadores.java  Strings.java  TiposDeDatos.java  Variables.java
practice-python/: README.md
practice-python/dsa/arrays/: 3_sum.py
practice-python/dsa/two-pointers/: 202_happy_number.py
practice-rust/: README.md
practice-rust/basics/src/: main.rs
practice-rust/fundamentals/: Cargo.toml  README.md  build.sh
practice-rust/fundamentals/src/: bucles.rs  colecciones.rs  control_flujo.rs  enums.rs  errores.rs  funciones.rs  operadores.rs  ownership.rs  referencias.rs  strings.rs  structs.rs  traits.rs  variables.rs
